--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="register.html">Register</a>
+            <a href="users.html">Users</a>
         </nav>
     </header> 
     
