--- a/users.html
+++ b/users.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/favicon.ico">
-    <title>Document</title>
+    <link rel="icon" href="#">
+    <script src="https://kit.fontawesome.com/34cefa1f3d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+    <title>Registration System</title>
 </head>
 <body>
+    <header class="site-register">
+        <h1>My Awesome User Registration System</h1>
+
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="register.html">Register</a>
+            <a href="users.html">Users</a>
+        </nav>
+    </header> 
     
+    <main>
+    </main>
+
+    <footer>
+        <p class="footer-text">&copy; Castillo Edgar 2022</p>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="scripts/storeManager.js"></script>
+    <script src="scripts/app.js"></script>
 </body>
 </html>
