--- a/register.html
+++ b/register.html
@@ -16,7 +16,6 @@
         <nav>
             <a id="link-style" href="index.html">Home</a>
             <a href="register.html">Register</a>
-            <a href="users.html">Users</a>
         </nav>
     </header> 
     
@@ -59,8 +58,8 @@
 
             <div class="form-container-img">
                 <div class="overlay">
-                    <p>Do you want to see the registered users?</p>
-                    <button onclick="window.location.href='users.html';">Users</button>
+                    <p>Do you already have an account?</p>
+                    <button onclick="window.location.href='index.html';">Log in</button>
                 </div>
             </div>
         </div>
