--- a/register.html
+++ b/register.html
@@ -43,12 +43,7 @@
                             <option value="Debit Card">Debit Card</option>
                             <option value="PayPal">PayPal</option>
                         </select>
-                        <select name="color" id="txtColor">
-                            <option value="" disabled selected>Select your color</option>
-                            <option value="Blue">Blue</option>
-                            <option value="Red">Red</option>
-                            <option value="Yellow">Yellow</option>
-                        </select>
+                        <input type="color" id="txtColor">
                         <input type="text" id="txtPhone" placeholder="Enter your phone number">
             
                         <button id="btnRegister">Register</button>
