--- a/users.html
+++ b/users.html
@@ -21,6 +21,18 @@
     </header> 
     
     <main>
+        <table id="users">
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Age</th>
+                <th>Email</th>
+                <th>Address</th>
+                <th>Phone</th>
+                <th>Payment</th>
+                <th>Color</th>
+            </tr>
+          </table>
     </main>
 
     <footer>
@@ -29,6 +41,6 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="scripts/storeManager.js"></script>
-    <script src="scripts/app.js"></script>
+    <script src="scripts/list.js"></script>
 </body>
 </html>
