--- a/users.html
+++ b/users.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="site-register">
-        <h1>My Awesome User Registration System</h1>
+        <h1>User Registration System</h1>
 
         <nav>
             <a href="index.html">Home</a>
