--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="site-init">
-        <h1>My Awesome User Registration System</h1>
+        <h1>User Registration System</h1>
 
         <nav>
             <a href="index.html">Home</a>
@@ -22,14 +22,20 @@
     <main>
         <p class="container-title"><i class="fa-solid fa-key fa-sm"></i>Login</p>
         <div class="login-container">
-            <input type="text" id="txtUserName" placeholder="Enter your user name">
+            <input type="text" id="txtEmail" placeholder="Enter your email">
             <input type="password" id="txtPassword" placeholder="Enter your password">
-            <button>Login</button>
+            <p class="login-error hide" id="loginError">HERE</p>
+            <button id="btnLogin">Login</button>
+            <a href="register.html" class="not-user">Not a User?</a>
         </div>
     </main>
 
     <footer>
         <p class="footer-text">&copy; Castillo Edgar 2022</p>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="scripts/storeManager.js"></script>
+    <script src="scripts/login.js"></script>
 </body>
 </html>
