--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="site-register">
-        <h1>My Awesome User Registration System</h1>
+        <h1>User Registration System</h1>
 
         <nav>
             <a id="link-style" href="index.html">Home</a>
@@ -46,6 +46,8 @@
                         <input type="color" id="txtColor">
                         <input type="text" id="txtPhone" placeholder="Enter your phone number">
             
+                        <p class="alert-error hide" id="alertError"></p>
+
                         <button id="btnRegister">Register</button>
                     </div>
                 </div>
